--- a/cybersec-frontend/package.json
+++ b/cybersec-frontend/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@mantine/core": "^8.0.2",
     "@mantine/hooks": "^8.0.2",
+    "lucide-react": "^0.525.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0"
   },
